--- a/template/admin-final/to-do-details.html
+++ b/template/admin-final/to-do-details.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css" integrity="sha512-bYPO5jmStZ9WI2602V2zaivdAnbAhtfzmxnEGh9RwtlI00I9s8ulGe4oBa5XxiC6tCITJH/QG70jswBhbLkxPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
 
@@ -71,19 +71,49 @@
     </nav>
     <!-- end main menu -->
     <!-- main -->
+    
     <main class="content-wrapper">
         <div class="container p-30">
+            <div class="section-body">
+                <div class="container " style="padding-bottom: 30px">
+                  <h1>Task Name</h1>
+                  <div class="group-btn" style="margin-top: 30px;">
+                    <button type="button" class="btn btn-primary "data-toggle="modal" data-target="#new-task">Edit</button>
+                    <button type="button" class="btn btn-danger ">Delete</button>
+                  </div>
+                  <div class="col-6">
+                    <div class="row">
+                      <div class="col-6 py-1"><strong>Created:</strong></div>
+                      <div class="col-6 py-1">09 Jun 2019 11:32AM</div>
+                      <div class="col-6 py-1"><strong>Creator:</strong></div>
+                      <div class="col-6 py-1">Nathan Guerrero</div>
+                      <div class="col-6 py-1"><strong>Todo:</strong></div>
+                      <div class="col-6 py-1"><strong>32</strong></div>
+                      <div class="col-6 py-1"><strong>Bug:</strong></div>
+                      <div class="col-6 py-1"><strong>5</strong></div>
+                      <div class="col-6 py-1"><strong>Team size:</strong></div>
+                      <div class="col-6 py-1">
+                        <span class="avatar avatar-sm">+8</span>
+                      </div>
+                      <div class="col-6 py-1"><strong>Members:</strong></div>
+                      <div class="col-6 py-1"><strong>Lương, Tuyên</strong></div>
+                      <div class="col-6 py-1"><strong>Status</strong></div>
+                      <div class="col-6 py-1"><strong><span class="badge badge-success">Done</span></strong></div>
+                    </div>
+                  </div>
+    
+          
+                </div>
             <div class="row">
-                <a href=""><h1>Task Name</h1></a>
                 
                 <div class="col-md-12 main-datatable">
                     <div class="card_body">
                         <div class="task-list">Todo List</div>
                         <div class="row d-flex">
-                            <div class=" col-sm-4 btn-group ">
+                            <div class=" col-sm-4 group-btn ">
                                                             
-                                <button class="btn btn-outline-success" data-toggle="modal" data-target="#exampleModal">New Todo</button>
-                                <button class="btn btn-outline-dark" data-toggle="modal" data-target="#exampleModal"><a href="project-details.html">Task List</a></button>
+                                <button class="btn btn-success" data-toggle="modal" data-target="#exampleModal">New Todo</button>
+                                <button class="btn btn-dark" data-toggle="modal" data-target="#exampleModal"><a href="project-details.html">Task List</a></button>
                                 
                             </div>
                             
@@ -257,6 +287,88 @@
               </div>
             </div>
           </div>
+          <!-- Modal End -->
+                 <!-- modal new task -->
+                 <!-- Modal -->
+
+                 <div class="modal fade" id="new-task" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Task Details</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group row">
+                                <label for="inputName" class="col-sm-3 col-form-label">Task Name<span
+                                        class="text-danger">*</span></label>
+                                <div class="col-sm-9">
+                                    <input type="Text" class="form-control" id="inputName" placeholder="Name">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-md-3 col-form-label">Due <span class="text-danger">*</span></label>
+                                <div class="col-md-9" style="display: flex;">
+                                    <input type="text" class="form-control datepicker" name="date" value="" >
+                                    
+                                    <span style="padding: 10px;">To</span>
+                                    <input type="text" class="form-control datepicker" name="date" value="" >
+                                   
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="exampleFormControlSelect1" class="col-sm-3 col-form-label">Priority<span
+                                        class="text-danger">*</span></label>
+                                <div class="col-sm-9">
+                                    <select class="form-control" id="exampleFormControlSelect1">
+                                        <option>High</option>
+                                        <option>Normal</option>
+                                        <option>Low</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-md-3 col-form-label">Description <span class="text-danger">*</span></label>
+                                <div class="col-md-9">
+                                    <textarea rows="4" class="form-control no-resize" placeholder="Descriptions"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-md-3 col-form-label">
+                                    Assign for<span class="text-danger">*</span></label>
+                                </label>
+                                <div class="col-md-9">
+                                    <select class="selectpicker" data-live-search="true" title="Select User">
+                                        
+                                        <option data-tokens="">User1</option>
+                                        <option data-tokens="">User2</option>
+                                        <option data-tokens="">User3</option>
+                                      </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-md-3 col-form-label">
+                                    Status<span class="text-danger">*</span></label>
+                                </label>
+                                <div class="col-md-7">
+                                    <select class="selectpicker"  title="Select Status">
+                                        <option data-tokens="">Working</option>
+                                        <option data-tokens="">On-Reviewing</option>
+                                        <option data-tokens="">Done</option>
+                                      </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+         <!-- modal new task END -->
 
     </main>
     <footer class="footer">
@@ -268,7 +380,8 @@
       </footer>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
   <!-- (Optional) Latest compiled and minified JavaScript translation files -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/i18n/defaults-*.min.js"></script>
